--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -699,9 +699,7 @@ CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
-CONFIG_QCOM_REMOTEQDSS=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_SMCINVOKE=y
@@ -806,3 +804,6 @@ CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=240
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+CONFIG_DEBUG_FS=y
+CONFIG_QCOM_REMOTEQDSS=y
+CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
