defconfig: Disable debugfs
debugfs consists of a sprawling tree of debug nodes that expose undue
attack surface. Even having something like SELinux in front of it is
mostly only a partial mitigation but not a complete solution. The eventual
complete solution involves moving essential userspace APIs to a real
interface meant for that (i.e., not debugfs). But until then, we can at
least just remove debugfs nodes that aren't at all needed, thereby
considerably reducing attack surface, compile time, and generally
debloating the kernel for production scenarios.

Change-Id: Ib44eaa8c2455e5702625df5eec2526234d97e950
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>
Signed-off-by: odsazib <odsazib@gmail.com>

--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -791,6 +791,4 @@ CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=240
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
-CONFIG_DEBUG_FS=y
-CONFIG_QCOM_REMOTEQDSS=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+CONFIG_MSM_IDLE_STATS=y
