defconfig: Enable DriveDroid Storage Support

--- a/arch/arm64/configs/tulip_defconfig
+++ b/arch/arm64/configs/tulip_defconfig
@@ -793,3 +793,4 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=240
+CONFIG_USB_CONFIGFS_MASS_STORAGE=y
