--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -804,3 +804,4 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
