--- a/arch/arm64/configs/jason_defconfig
+++ b/arch/arm64/configs/jason_defconfig
@@ -797,3 +797,4 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
