defconfig: Set 16ms PELT halflife Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -789,3 +789,4 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_PELT_UTIL_HALFLIFE_16=y
