--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -790,3 +790,5 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=240
