defconfig: Enable MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY
Restrict msm_performance to setting min/max frequencies only so that it
doesn't conflict with EAS.

Signed-off-by: odsazib <odsazib@gmail.com>

--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -798,3 +798,4 @@ CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY=y
