--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-EAS-SDM660-LA.UM.8.2.r2-02300"
+CONFIG_LOCALVERSION="-EAS-PELT-SDM660-LA.UM.8.2.r2-02300"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
